# gr-openssl

./: CMakeLists.txt  MANIFEST.md  README.md  q
cmake/Modules/: cryptoConfig.cmake
docs/: README.crypto
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: key_generation.grc  key_generation_from_password.grc  msg.grc  symmetric_encryption.grc  symmetric_encryption_pdu.grc  symmetric_encryption_pdu_2.grc  symmetric_encryption_tagged.grc  tagged.grc  top_block.py
grc/: CMakeLists.txt  crypto_auth_dec_aes_gcm.xml  crypto_auth_enc_aes_gcm.xml  crypto_generate_key_pass.xml  crypto_generate_key_rand.xml  crypto_generate_rand_key.xml  crypto_hash.xml  crypto_sym_ciph_desc.xml  crypto_sym_dec.xml  crypto_sym_dec_tagged_bb.xml  crypto_sym_enc.xml  crypto_sym_enc_tagged_bb.xml
include/crypto/: CMakeLists.txt  api.h  auth_dec_aes_gcm.h  auth_enc_aes_gcm.h  crypt_helper.h  generate_key.h  generate_rand_key.h  hash.h  key.h  sym_ciph_desc.h  sym_dec.h  sym_dec_tagged_bb.h  sym_enc.h  sym_enc_tagged_bb.h
lib/: CMakeLists.txt  auth_dec_aes_gcm_impl.cc  auth_dec_aes_gcm_impl.h  auth_enc_aes_gcm_impl.cc  auth_enc_aes_gcm_impl.h  crypt_helper.cc  generate_key.cc  generate_rand_key.cc  hash_impl.cc  hash_impl.h  key.cc  qa_crypto.cc  qa_crypto.h  sym_ciph_desc.cc  sym_dec_impl.cc  sym_dec_impl.h  sym_dec_tagged_bb_impl.cc  sym_dec_tagged_bb_impl.h  sym_enc_impl.cc  sym_enc_impl.h  sym_enc_tagged_bb_impl.cc  sym_enc_tagged_bb_impl.h  test_crypto.cc
python/: CMakeLists.txt  __init__.py  qa_auth_enc_aes_gcm.py  qa_hash.py  qa_sym_dec.py  qa_sym_dec_tagged_bb.py  qa_sym_enc.py  qa_sym_enc_tagged_bb.py
python/.unittests/python/: qa_sym_enc.xml
swig/: CMakeLists.txt  crypto_swig.i  crypto_swig.i~
